yaml/busybox_deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  containers:
    - name: mybusybox
      image: busybox
      args:
        - /bin/sh
        - -c
        - while true; do
          echo "hello world";
          echo $(date);
          sleep 1;
          done;
