yaml/nginx_deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample
  labels:
    app: sample
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - mountPath: /tmp/
              name: log-dir
          resources:
            limits:
              cpu: 1m
              memory: 1Gi
            requests:
              cpu: 1m
              memory: 100Mi
      volumes:
        - name: log-dir
          emptyDir: {}
