yaml/secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-test
  labels:
    app: busybox-test
spec:
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      name: my-busybox
      labels:
        app: busybox
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: mysql-config
      restartPolicy: Always
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "a.example.com"
            - "b.example.com"
        - ip: "192.168.1.100"
          hostnames:
            - "t.example.com"
      containers:
        - name: busybox
          image: busybox
          volumeMounts:
            - mountPath: /etc/mysql
              name: secret-volume
          command:
            - /bin/sh
          args:
            - -c
            - while true; do
              echo "hello world";
              echo $(date);
              sleep 1;
              done;
