yaml/nginx_svc_headness.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc-headness
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: sample
  ports:
    - name: http
      port: 80
      targetPort: 80
