yaml/nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: ingress-nginx
spec:
  rules:
    - host: nginx.test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-nginx
              servicePort: 80
